--- a/HTML/member.html
+++ b/HTML/member.html
@@ -6,6 +6,11 @@
 <link href="css/style.css" type="text/css" rel="stylesheet" />
 <script src="js/jquery-1.7.min.js" type="text/javascript"></script>
 <script src="js/common.js"  type="text/javascript"></script>
+<script>
+    
+
+
+</script>
 
 </head>
 <body class="index">
