--- a/HTML/index.html
+++ b/HTML/index.html
@@ -30,7 +30,7 @@
 
 <div class="top">
 	<div class="w1200">
-		<div class="left">您好，欢迎光临易易城！<a href="#">[登录]</a> <a href="#">[注册]</a></div>
+		<div class="left">您好，欢迎光临易易城！<a href="login.html">[登录]</a> <a href="#">[注册]</a></div>
         <div class="right"><a href="#">我的会员中心</a>|<a href="#">收藏夹</a>|<a href="#">服务中心</a>|<a href="#">在线客服</a>|<a href="#">购物车<b>0</b>件</a></div>
         <div class="clear"></div>
     </div>
@@ -48,7 +48,7 @@
         </div>
         <div class="s_r">
         	<dl>
-            	<dt><p>购物车<span>0</span></p></dt>
+            	<dt><p><a href="shopcar.html">购物车</a><span>0</span></p></dt>
                 <dd>客服电话：<b>400-0139-038</b></dd>
             </dl>
         </div>
