--- a/HTML/info.html
+++ b/HTML/info.html
@@ -6,6 +6,7 @@
 <link href="css/style.css" type="text/css" rel="stylesheet" />
 <script src="js/jquery-1.7.min.js" type="text/javascript"></script>
 <script src="js/common.js"  type="text/javascript"></script>
+<link rel="stylesheet" href="./shopcar.html">
 
 </head>
 <body class="index">
@@ -138,9 +139,9 @@
         </dl>
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="go_tb">
          <tr>
-           <td width="20%"><a href="#" class="go_buy">继续购物</a></td>
+           <td width="20%"><a href="index.html" class="go_buy">继续购物</a></td>
            <td width="63%">&nbsp;</td>
-           <td width="17%" align="right"><a href="#" class="code">结 算</a></td>
+           <td width="17%" align="right"><a href="payply.html" class="code">结 算</a></td>
          </tr>
         </table>
         <div class="clear"></div>
