--- a/HTML/shopcar.html
+++ b/HTML/shopcar.html
@@ -6,6 +6,84 @@
 <link href="css/style.css" type="text/css" rel="stylesheet" />
 <script src="js/jquery-1.7.min.js" type="text/javascript"></script>
 <script src="js/common.js"  type="text/javascript"></script>
+<script type="text/javascript">
+	
+	$(function(){
+		changeTotal();
+		
+		$(".sl-left").click(function(){
+			//获取输入框
+			var input = $(this).next("input");
+			//获取数量并-1
+			var num = parseInt(input.val())-1;
+			//如果数量是0则删除当前商品
+			if(num <= 0){
+				$(this).parent().parent().remove();
+				changeTotal();
+				return;
+			}
+			//修改商品数量
+			input.val(num);
+			
+			changePrice(input,num);
+		})
+		
+		$(".sl-right").click(function(){
+			var input = $(this).prev("input");
+			var num = parseInt(input.val())+1;
+			input.val(num);
+			changePrice(input,num);
+		})
+	})
+	
+
+	
+	function changePrice(obj,num){
+		//修改金额
+		var span = $(obj).parent().prev(".mid-dj").children("span");
+		var price = parseInt(span.html());
+		var sub = num * price
+
+		//修改合计
+		$(obj).parent().nextAll(".mid-je").children("span").html(sub);
+		
+		changeTotal();
+	}
+	
+	//修改总价
+	function changeTotal(){
+		//获取所有价格
+		var total = 0;
+		$(".mid-je").children("span").each(function(){
+			var _num = parseInt($(this).html())
+			total+=_num;
+		})
+		
+		//修改总价 
+		$(".jshj-p2").children("span").html(total);
+    }
+
+	// 购物车全选
+	$(function () {
+		$('.check_all').on('click', function () {
+			if (this.checked) {
+				$("input[name='sub']").attr('checked', true);
+			} else {
+				$("input[name='sub']").attr('checked', false);
+			}
+		});
+    });
+    
+    $(function(){
+        $(".del").on("click",function(){
+            $(this).parent().parent().remove()
+        })
+        $(".del_one").on("click", function(){
+            $(this).parent().parent().remove()
+        })
+    })
+	
+</script>
 
 </head>
 <body class="index">
@@ -68,7 +146,7 @@
 
 
 <div class="w1200">
-	<div class="position"><a href="#">首页</a> > <a href="#">购物车</a></div>
+	<div class="position"><a href="index.html">首页</a> > <a href="shopcar.html">购物车</a></div>
     
     <div class="shopcar">
     	<div class="shop_lc"><span class="sp01">我的购物车</span><span class="sp02">填写提交信息表单</span><span class="sp03">在线支付</span></div>
@@ -77,7 +155,7 @@
             <dd>
             	<table width="100%" cellpadding="0" cellspacing="0" border="0">
                   <tr class="tr_t">
-                    <td width="4%"><input type="checkbox" checked="checked"/></td>
+                    <td width="4%"><input type="checkbox" checked="checked" class="check_all" name="sub"/></td>
                     <td width="4%">全选</td>
                     <td width="35%">商品</td>
                     <td width="26%">单价</td>
@@ -86,7 +164,7 @@
                     <td width="11%">操作</td>
                   </tr>
                   <tr class="tr_c">
-                    <td><input type="checkbox" checked="checked"/></td>
+                    <td><input type="checkbox" checked="checked" name="sub"/></td>
                     <td colspan="2">
                     	<table width="100%" border="0" cellspacing="0" cellpadding="0">
                           <tr>
@@ -95,13 +173,13 @@
                           </tr>
                         </table>
                     </td>
-                    <td class="price">￥3083.00</td>
-                    <td><span class="jian">-</span><input type="text" value="1"/><span class="jia">+</span></td>
-                    <td class="price">￥3083.00</td>
+                    <td class="price mid-dj">￥<span>3083</span>.00</td>
+                    <td><span class="jian sl-left"><a href="#">-</a></span><input type="text" value="1"/><a href="#" class="jia sl-right">+</a></td>
+                    <td class="price mid-je">￥<span>3083</span>.00</td>
                     <td><a href="#">删除</a></td>
                   </tr>
                   <tr class="tr_c">
-                    <td><input type="checkbox" checked="checked"/></td>
+                    <td><input type="checkbox" checked="checked" name="sub"/></td>
                     <td colspan="2">
                     	<table width="100%" border="0" cellspacing="0" cellpadding="0">
                           <tr>
@@ -110,9 +188,9 @@
                           </tr>
                         </table>
                     </td>
-                    <td class="price">￥3083.00</td>
-                    <td><span class="jian">-</span><input type="text" value="1"/><span class="jia">+</span></td>
-                    <td class="price">￥3083.00</td>
+                    <td class="price mid-dj">￥<span>3083</span>.00</td>
+                    <td><span class="jian sl-left"><a href="#">-</a></span><input type="text" value="1"/><span class="jia sl-right"><a href="#">+</a></span></td>
+                    <td class="price mid-je">￥<span>3083</span>.00</td>
                     <td><a href="#">删除</a></td>
                   </tr>
                   <tr class="tr_d">
@@ -121,7 +199,7 @@
                           <tr>
                             <td width="75%"><span class="del"><a href="#">删除选中商品</a></span></td>
                             <td width="11%">已选商品  <strong>1</strong>  件</td>
-                            <td width="14%" class="all_price">合计：<font>￥3083.00</font></td>
+                            <td width="14%" class="all_price">合计：<font class="jshj-p2">￥<span>3083</span>.00</font></td>
                           </tr>
                         </table>
                     </td>
@@ -133,9 +211,9 @@
         </dl>
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="go_tb">
          <tr>
-           <td width="20%"><a href="#" class="go_buy">继续购物</a></td>
+           <td width="20%"><a href="index.html" class="go_buy">继续购物</a></td>
            <td width="63%">&nbsp;</td>
-           <td width="17%" align="right"><a href="#" class="code">结 算</a></td>
+           <td width="17%" align="right"><a href="./info.html" class="code">结 算</a></td>
          </tr>
         </table>
         <div class="clear"></div>
